[gd_scene load_steps=6 format=3 uid="uid://l4kyh6xqycoy"]

[ext_resource type="Script" path="res://main_window/overlay/calendar_widget/calendar_widget.gd" id="1_6ouga"]
[ext_resource type="Texture2D" uid="uid://kpsxfahirjkd" path="res://main_window/navigation_bar_left/images/arrow_left.svg" id="2_3qe07"]
[ext_resource type="Script" path="res://custom/tooltip.gd" id="2_yxtut"]
[ext_resource type="Texture2D" uid="uid://dg16vv3p66p28" path="res://main_window/navigation_bar_left/images/today.svg" id="4_w73ku"]
[ext_resource type="Texture2D" uid="uid://5x5oa7kf2q8s" path="res://main_window/navigation_bar_right/images/arrow_right.svg" id="5_kngd2"]

[node name="CalendarWidget" type="PanelContainer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -239.0
offset_top = 87.0
offset_right = -40.0
offset_bottom = 151.0
grow_horizontal = 0
theme_type_variation = &"PanelContainer_Popup"
script = ExtResource("1_6ouga")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="MonthName" type="Label" parent="VBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "JUNE 2024"

[node name="PreviousMonth" type="Button" parent="VBox/HBox"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
icon = ExtResource("2_3qe07")

[node name="Tooltip" type="Node" parent="VBox/HBox/PreviousMonth"]
script = ExtResource("2_yxtut")
text = "Previous Month"

[node name="Today" type="Button" parent="VBox/HBox"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
icon = ExtResource("4_w73ku")

[node name="Tooltip" type="Node" parent="VBox/HBox/Today"]
script = ExtResource("2_yxtut")
text = "Jump To Today"

[node name="NextMonth" type="Button" parent="VBox/HBox"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
icon = ExtResource("5_kngd2")

[node name="Tooltip" type="Node" parent="VBox/HBox/NextMonth"]
script = ExtResource("2_yxtut")
text = "Next Month"

[node name="GridContainer" type="GridContainer" parent="VBox"]
layout_mode = 2
columns = 7

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="VBox/HBox/PreviousMonth" to="." method="_on_previous_month_pressed"]
[connection signal="pressed" from="VBox/HBox/Today" to="." method="_on_today_pressed"]
[connection signal="pressed" from="VBox/HBox/NextMonth" to="." method="_on_next_month_pressed"]
